--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -8,14 +8,18 @@
     <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
-       android:layout_height="180dp">
+       android:layout_marginTop="40dp"
+       android:layout_marginLeft="30dp"
+       android:layout_marginRight="30dp"
+       
+       android:layout_height="130dp">
         <TextView
             android:id="@+id/console"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/tempstring"
+            android:textSize="16sp"
             android:textColor="#008000" />
-
     </ScrollView>
 	<LinearLayout 
 	    android:id="@+id/buttonpanel"
@@ -47,7 +51,6 @@
 	    android:text="@string/start_button" />
 	 <LinearLayout
         android:id="@+id/adLayout"
-        android:layout_below="@id/onekey"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
