--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,64 +1,80 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-     xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"  
+    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
+    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="${relativePackage}.${activityClass}" >
+    android:orientation="vertical" >
+
     <ScrollView
-       android:id="@+id/scrollView"
-       android:layout_width="match_parent"
-       android:layout_marginTop="40dp"
-       android:layout_marginLeft="30dp"
-       android:layout_marginRight="30dp"
-       
-       android:layout_height="130dp">
+        android:id="@+id/scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="150dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginTop="40dp">
+
         <TextView
             android:id="@+id/console"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/tempstring"
-            android:textSize="16sp"
-            android:textColor="#008000" />
+            android:textColor="#008000"
+            android:textSize="16sp" />
     </ScrollView>
-	<LinearLayout 
-	    android:id="@+id/buttonpanel"
-	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:gravity="center"
-	    android:orientation="horizontal">
-	     <Button
-	    style="?android:attr/buttonBarButtonStyle" 
-        android:id="@+id/about"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:textColor="#ffffff"
-        android:background="@drawable/button"
-        android:text="@string/about" />
-	     <Button
-	    style="?android:attr/buttonBarButtonStyle" 
-        android:id="@+id/help"
-        android:textColor="#ffffff"
-        android:background="@drawable/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:text="@string/help" />
-	</LinearLayout>
 
-	<Button
-	    android:id="@+id/onekey"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:background="@drawable/start"
-	    android:gravity="center"
-	    android:layout_gravity="center"
-	    android:text="@string/start_button" />
-	 <LinearLayout
-        android:id="@+id/adLayout"
+    <LinearLayout
+        android:id="@+id/coolhostsVersion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:id="@+id/chversion"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/version"
+            android:textColor="#008000"
+            android:textSize="16sp" />
     </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/buttonpanel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal" >
+
+        <Button
+            android:id="@+id/about"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@drawable/button"
+            android:text="@string/about"
+            android:textColor="#ffffff" />
+
+        <Button
+            android:id="@+id/help"
+            style="?android:attr/buttonBarButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="20dp"
+            android:background="@drawable/button"
+            android:text="@string/help"
+            android:textColor="#ffffff" />
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/onekey"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:background="@drawable/start"
+        android:gravity="center"
+        android:text="@string/start_button" />
+
 </LinearLayout>
