--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,11 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
+	<WebView  
+        android:id="@+id/webView1"  
+        android:layout_width="match_parent"  
+        android:layout_height="300dp" /> 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="100dp"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="40dp">
@@ -22,59 +25,13 @@
             android:textSize="16sp" />
     </ScrollView>
 
-    <LinearLayout
-        android:id="@+id/coolhostsVersion"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:gravity="center"
-        android:orientation="horizontal" >
-
-        <TextView
-            android:id="@+id/chversion"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/version"
-            android:textColor="#008000"
-            android:textSize="16sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/buttonpanel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal" >
-
-        <Button
-            android:id="@+id/about"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:background="@drawable/button"
-            android:text="@string/about"
-            android:textColor="#ffffff" />
-
-        <Button
-            android:id="@+id/help"
-            style="?android:attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:background="@drawable/button"
-            android:text="@string/help"
-            android:textColor="#ffffff" />
-    </LinearLayout>
-
     <Button
         android:id="@+id/onekey"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:background="@drawable/start"
+        android:background="@drawable/btn_background"
         android:gravity="center"
-        android:text="@string/start_button" />
+        android:text="" />
 
 </LinearLayout>
