--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -7,14 +7,14 @@
 	<WebView  
         android:id="@+id/webView1"  
         android:layout_width="match_parent"  
-        android:layout_height="300dp" /> 
+        android:layout_height="370dip"/> 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="60dip"
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
-        android:layout_marginTop="40dp">
+        android:layout_marginTop="5dp">
 
         <TextView
             android:id="@+id/console"
@@ -28,8 +28,8 @@
     <Button
         android:id="@+id/onekey"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_gravity="center"
+		android:layout_height="70dip"        
         android:background="@drawable/btn_background"
         android:gravity="center"
         android:text="" />
